scotia-peru-aks/viya/sas-bases/overlays/network/route.openshift.io/v1/route/components/sas-risk-cirrus-builder/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-riskCirrusBuilder
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-risk-cirrus-builder
    sas.com/admin: namespace
  name: sas-risk-cirrus-builder
spec:
  host: $(INGRESS_HOST)
  path: /riskCirrusBuilder
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-risk-cirrus-builder
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-riskCirrusBuilder
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-risk-cirrus-builder
    sas.com/admin: namespace
  name: sas-risk-cirrus-builder-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /riskCirrusBuilder
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-risk-cirrus-builder
  wildcardPolicy: Subdomain
